--- a/application/index/view/wallet/sale.html
+++ b/application/index/view/wallet/sale.html
@@ -44,7 +44,7 @@
             </style>
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>钱包列表</h5>
+                    <h5>列表</h5>
                     <div class="ibox-tools">
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
@@ -70,9 +70,9 @@
                                                 <label>业务类型</label>
                                                 <select class="form-control" id="status" name="status">
                                                     <option value="" >-全部-</option>
-                                                    <option value="0">系统</option>
-                                                    <option value="1">分销</option>
-                                                    <option value="2">提现</option>
+                                                    <option value="1">直接推荐</option>
+                                                    <option value="2">间接推荐</option>
+                                                    <option value="4">极差</option>
 
                                                 </select>
                                             </div>
