--- a/application/index/view/wallet/wallet.html
+++ b/application/index/view/wallet/wallet.html
@@ -98,10 +98,11 @@
                                             <th data-field="headimg" data-formatter="formatImage" align="center">头像</th>
                                             <th data-field="tel" data-sortable="true"  >手机号</th>
                                             <th data-field="status_name" data-sortable="true"  >状态</th>
-                                            <th data-field="normal_money" data-sortable="true"  >分销余额</th>
+                                            <th data-field="normal_money" data-sortable="true"  >个人余额</th>
+                                            <th data-field="normal_team_money" data-sortable="true"  >团队余额</th>
                                             <th data-field="add_time" data-formatter="formatTime" align="center" data-sortable="true">添加时间</th>
                                             <th data-field="upd_time" data-formatter="formatTime" align="center" data-sortable="true">修改时间</th>
-                                            <th data-field="" data-formatter="formatOperation" >操作</th>
+                                            <!--th data-field="" data-formatter="formatOperation" >操作</th-->
                                         </tr>
                                         </thead>
                                     </table>
