--- a/application/index/view/user/overlog.html
+++ b/application/index/view/user/overlog.html
@@ -90,8 +90,8 @@
                                            <th data-checkbox="true"></th>
                                             <th data-field="id" data-sortable="true" class="col-sm-1">ID</th>
                                             <th data-field="user" data-sortable="true" class="col-sm-1">用户名</th>
-                                            <th data-field="email" data-sortable="true" class="col-sm-1">用户名</th>
                                             <th data-field="headimg" data-formatter="formatImage" align="center"  >头像</th>
+                                            <th data-field="status_name" data-sortable="true" class="col-sm-1"  >头像</th>
                                             <th data-field="real_name" data-sortable="true" class="col-sm-1">姓名</th>
                                             <th data-field="card_number" data-sortable="true" class="col-sm-1">证件号</th>
                                             <th data-field="imgurls" data-sortable="true" data-formatter="detailFormat" >反馈图片</th>
@@ -212,7 +212,7 @@
     function formatOperation(value, row) {
         var html = '<div class="btn-group">';
 
-        html += '<button type="button" class="btn  btn-white" onclick="cashcheck(' + row.id + ',' + row.type + ')" >审核</button>';
+        html += '<button type="button" class="btn  btn-white" onclick="cashcheck(' + row.id + ')" >审核</button>';
 
         html +=	'</div>';
         return html;
@@ -229,7 +229,7 @@
             return value;
         }
     }
-    function cashcheck(id,wallet_type) {
+    function cashcheck(id) {
         parent.layer.open({
             type: 2,
             title: false,
@@ -239,7 +239,7 @@
             offset: 'rb', //右下角弹出
             time: 50, //2秒后自动关闭
             shift: 2,
-            content: ['/index/wallet/cashcheck/id/' + id+'/wallet_type/'+wallet_type, 'yes'], //iframe的url，no代表不显示滚动条
+            content: ['/index/wallet/overlogcheck/id/' + id, 'yes'], //iframe的url，no代表不显示滚动条
             end: function(){ //此处用于演示
                 parent.layer.open({
                     type: 2,
@@ -248,7 +248,7 @@
                     shade: false,
                     maxmin: true, //开启最大化最小化按钮
                     area: ['1150px', '650px'],
-                    content: '/index/wallet/cashcheck/id/' + id+'/wallet_type/'+wallet_type,
+                    content: '/index/wallet/overlogcheck/id/' + id,
                     end:function() {
                         location.reload();
                     }
@@ -259,7 +259,7 @@
 
 
     function check(id,wallettype) {
-            window.location.href = "/index/wallet/cashcheck/id/" + id;
+            window.location.href = "/index/wallet/overlogcheck/id/" + id;
     }
 
 </script>
