--- a/application/index/view/wallet/overlogcheck.html
+++ b/application/index/view/wallet/overlogcheck.html
@@ -40,7 +40,7 @@
 <div >
     <div class="ibox float-e-margins">
         <div class="ibox-title">
-            <h5>{$current_menu.name|default="提现审核"}</h5>
+            <h5>{$current_menu.name|default="认证审核"}</h5>
             <div class="ibox-tools">
                 <a class="collapse-link">
                     <i class="fa fa-chevron-up"></i>
@@ -63,27 +63,7 @@
                                     <div id="tab-1" class="tab-pane active">
                                         <form method="post" class="form-horizontal newsForm">
                                             <div class="panel-body">
-                                                <div class="form-group">
-                                                    <label class="col-sm-3 control-label">提现编号</label>
-                                                    <div class="col-sm-9">
-                                                        <p class="form-control-static">{$one['cash_no']}</p>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label class="col-sm-3 control-label">提现类型</label>
-                                                    <div class="col-sm-9">
-                                                        <p class="form-control-static">{if condition="$one.type eq 0 "}个人
-                                                            {else /} 团队
-                                                            {/if}</p>
-                                                    </div>
-                                                </div>
                                                 <div class="col-md-12">
-                                                    <div class="form-group">
-                                                        <label class="col-sm-3 control-label">打款金额:</label>
-                                                        <div class="col-sm-9">
-                                                            <input type="text" name="pay_money" class="form-control"  value="{$money}">
-                                                        </div>
-                                                    </div>
                                                     <div class="form-group">
                                                         <label class="col-sm-3 control-label">是否通过:</label>
                                                         <div class="col-sm-9">
@@ -96,7 +76,7 @@
                                                     <div class="form-group">
                                                         <label class="col-sm-3 control-label">备注:</label>
                                                         <div class="col-sm-9">
-                                                            <textarea name="msg" class="form-control" rows="5" cols="10" placeholder="请输入说明"  ></textarea>
+                                                            <textarea name="note" class="form-control" rows="5" cols="10" placeholder="请输入说明"  ></textarea>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -120,7 +100,7 @@
     </div>
 </div>
 <input type="hidden"  value="{$id}"  id="id"/>
-<input type="hidden"  value="{$one['type']}"  id="wallet_type"/>
+
 <script src="/static/hplus/js/jquery.min.js?v=2.1.4"></script>
 <script src="/static/hplus/js/plugins/layer/layer.js"></script>
 <script src="__STATIC__/js/bootstrap.min.js?v=3.3.6"></script>
@@ -133,8 +113,8 @@
             var id = $('#id').val()
             var wallet_type = $('#wallet_type').val()
             $.ajax({
-                url: "{:\\think\\Url::build('user/overlogcheck')}",
-                data: $(this).serialize() + "&id=" + id+ "&wallet_type=" + wallet_type,
+                url: "{:\\think\\Url::build('wallet/overlogcheck')}",
+                data: $(this).serialize() + "&id=" + id,
                 dataType: "json",
                 type: "post",
                 success: function(data){
